logs/gripper_depots_grid_314224.err
Traceback (most recent call last):
  File "/usr/lib64/python2.7/runpy.py", line 151, in _run_module_as_main
    mod_name, loader, code, fname = _get_module_details(mod_name)
  File "/usr/lib64/python2.7/runpy.py", line 113, in _get_module_details
    code = loader.get_code(mod_name)
  File "/usr/lib64/python2.7/pkgutil.py", line 283, in get_code
    self.code = compile(source, self.filename, 'exec')
  File "/home/u31jm22/hons-llm-heuristics/planner/run_grid.py", line 22
    def make_baseline_heuristic(name: str):
                                    ^
SyntaxError: invalid syntax
